--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -1,12 +1,12 @@
 @import url("https://fonts.googleapis.com/css?family=Kalam&display=swap");
 @import url("https://fonts.googleapis.com/css2?family=Nerko+One&display=swap");
 #brand {
-  font-family: 'Nerko One', cursive;
+  font-family: "Nerko One", cursive;
   font-size: 1.5rem;
 }
 
 .nav-item a {
-  font-family: 'Nerko One', cursive;
+  font-family: "Nerko One", cursive;
   font-size: large;
 }
 
@@ -18,11 +18,9 @@ body {
 .searcher select {
   width: 95px;
 }
-
 .searcher input {
   width: 35vw;
 }
-
 .searcher button {
   width: 50px;
   height: 50px;
@@ -36,136 +34,12 @@ body {
     height: 83vh;
   }
   .scrollbar section {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
-    -ms-flex-line-pack: center;
-        align-content: center;
-    scroll-behavior: smooth;
-    -webkit-box-flex: 1;
-        -ms-flex: 1;
-            flex: 1;
-    -ms-flex-positive: 1;
-        flex-grow: 1;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
-    min-height: 0;
-    margin-top: 15px;
-  }
-  .scrollbar section a {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    padding: 0 4px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -ms-flex-line-pack: center;
-        align-content: center;
-    margin-bottom: 15px;
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    -webkit-transition: all 0.09s;
-    transition: all 0.09s;
-    color: white;
-    margin-left: 15px;
-    margin-right: 15px;
-  }
-  .scrollbar section a:hover {
-    text-decoration: none;
-    color: grey;
-  }
-  .scrollbar section a .ensemble {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    -webkit-transition: all 0.09s;
-    transition: all 0.09s;
-    width: 400px;
-    height: 350px;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    background-color: #343a40 !important;
-  }
-  .scrollbar section a .ensemble:hover {
-    -webkit-transform: scale(0.9);
-            transform: scale(0.9);
-  }
-  .scrollbar section a .ensemble .part_un {
-    border-top: 1px solid white;
-    border-left: 1px solid white;
-    border-bottom: 1px solid white;
-    height: 350px;
-  }
-  .scrollbar section a .ensemble .part_un h3 {
-    font-size: 20px;
-    text-align: justify;
-  }
-  .scrollbar section a .ensemble .part_un p {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    text-align: center;
-  }
-  .scrollbar section a .ensemble .part_deux {
-    border-top: 1px solid white;
-    border-right: 1px solid white;
-    border-bottom: 1px solid white;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -ms-flex-line-pack: center;
-        align-content: center;
-  }
-  .scrollbar section a .ensemble .part_deux .badge {
-    position: absolute;
-    top: 0;
-  }
-  .scrollbar section a .ensemble .part_deux span {
-    display: block;
-    width: 100%;
-    text-align: center;
-    color: black;
-    font-family: 'Kalam', cursive;
-    text-shadow: white 1px 1px, white -1px 1px, white -1px -1px, white 1px -1px;
-    font-weight: bold;
-    width: 100%;
-    font-size: 1.2em;
-    position: absolute;
-    bottom: 0;
-  }
-  .scrollbar section a .ensemble .part_deux img {
-    display: block;
-    -webkit-filter: drop-shadow(0 0 1px black);
-            filter: drop-shadow(0 0 1px black);
-    -o-object-fit: scale-down;
-       object-fit: scale-down;
-    width: 100%;
-    padding: 5px;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-content: space-between;
   }
 }
-
 @media (orientation: portrait) {
   .scrollbar {
     margin-top: 15px;
@@ -174,206 +48,12 @@ body {
     margin: 5px 5px;
   }
   .scrollbar section {
-    -webkit-box-orient: vertical !important;
-    -webkit-box-direction: normal !important;
-        -ms-flex-direction: column !important;
-            flex-direction: column !important;
-    display: -webkit-box;
-    display: -ms-flexbox;
     display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-  }
-  .scrollbar section a {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    padding: 0 4px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -ms-flex-line-pack: center;
-        align-content: center;
-    padding: 0 4px;
-    margin-bottom: 10px;
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    -webkit-transition: all 0.09s;
-    transition: all 0.09s;
-    color: white;
-  }
-  .scrollbar section a:hover {
-    text-decoration: none;
-    color: grey;
-  }
-  .scrollbar section a .ensemble {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    -webkit-transition: all 0.09s;
-    transition: all 0.09s;
-    width: 95vw;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    background-color: #343a40 !important;
-  }
-  .scrollbar section a .ensemble:hover {
-    -webkit-transform: scale(0.9);
-            transform: scale(0.9);
-  }
-  .scrollbar section a .ensemble .part_un {
-    border-top: 1px solid white;
-    border-left: 1px solid white;
-    border-right: 1px solid white;
-    display: block;
-    width: 100%;
-    max-width: none !important;
-    -webkit-box-flex: 0;
-        -ms-flex: none;
-            flex: none;
-    height: 100px;
-  }
-  .scrollbar section a .ensemble .part_un h3 {
-    font-size: 5vw;
-  }
-  .scrollbar section a .ensemble .part_un p {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    text-align: center;
-    font-size: 2.5vw;
-  }
-  .scrollbar section a .ensemble .part_deux {
-    border-left: 1px solid white;
-    border-right: 1px solid white;
-    border-bottom: 1px solid white;
-    width: 95vw;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -ms-flex-line-pack: center;
-        align-content: center;
-    height: 100px;
-  }
-  .scrollbar section a .ensemble .part_deux .badge {
-    position: absolute;
-    top: 0;
-    right: 0;
-  }
-  .scrollbar section a .ensemble .part_deux span {
-    display: block;
-    text-align: right;
-    color: black;
-    font-family: 'Kalam', cursive;
-    text-shadow: white 1px 1px, white -1px 1px, white -1px -1px, white 1px -1px;
-    font-weight: bold;
-    width: 100%;
-    font-size: 1.2em;
-  }
-  .scrollbar section a .ensemble .part_deux img {
-    display: block;
-    -webkit-filter: drop-shadow(0 0 1px black);
-            filter: drop-shadow(0 0 1px black);
-    -o-object-fit: contain;
-       object-fit: contain;
-    height: 100px;
-    max-width: 150px;
-    padding: 10px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
+    flex-flow: row wrap;
+    justify-content: center;
+    align-content: space-between;
   }
 }
-
-.Javascript {
-  background-color: rgba(251, 255, 0, 0.445);
-  color: black;
-  font-family: 'Kalam', cursive;
-  text-shadow: white 1px 1px, white -1px 1px, white -1px -1px, white 1px -1px;
-  font-weight: bold;
-  width: 100%;
-  font-size: 1.2em;
-}
-
-.CSS {
-  background-color: rgba(245, 24, 0, 0.555);
-  color: black;
-  font-family: 'Kalam', cursive;
-  text-shadow: white 1px 1px, white -1px 1px, white -1px -1px, white 1px -1px;
-  font-weight: bold;
-  width: 100%;
-  font-size: 1.2em;
-}
-
-.HTML {
-  background-color: rgba(17, 0, 255, 0.466);
-  color: black;
-  font-family: 'Kalam', cursive;
-  text-shadow: white 1px 1px, white -1px 1px, white -1px -1px, white 1px -1px;
-  font-weight: bold;
-  width: 100%;
-  font-size: 1.2em;
-}
-
-.Bootstrap {
-  background-color: rgba(5, 0, 73, 0.274);
-  color: black;
-  font-family: 'Kalam', cursive;
-  text-shadow: white 1px 1px, white -1px 1px, white -1px -1px, white 1px -1px;
-  font-weight: bold;
-  width: 100%;
-  font-size: 1.2em;
-}
-
-.WordPress {
-  background-color: rgba(0, 176, 230, 0.493);
-  color: black;
-  font-family: 'Kalam', cursive;
-  text-shadow: white 1px 1px, white -1px 1px, white -1px -1px, white 1px -1px;
-  font-weight: bold;
-  width: 100%;
-  font-size: 1.2em;
-}
-
-.React {
-  background-color: #62dafb75;
-  color: black;
-  font-family: 'Kalam', cursive;
-  text-shadow: white 1px 1px, white -1px 1px, white -1px -1px, white 1px -1px;
-  font-weight: bold;
-  width: 100%;
-  font-size: 1.2em;
-}
-
-.PHP {
-  background-color: #9062fb79;
-  color: black;
-  font-family: 'Kalam', cursive;
-  text-shadow: white 1px 1px, white -1px 1px, white -1px -1px, white 1px -1px;
-  font-weight: bold;
-  width: 100%;
-  font-size: 1.2em;
-}
-
-.GEN {
-  background-color: #ffffff79;
-}
-
 ::-webkit-scrollbar {
   width: 7px;
   height: 7px;
@@ -423,29 +103,25 @@ footer {
   bottom: 0;
   width: 100%;
 }
-
 footer p {
   color: white;
 }
-
 @media only screen and (max-width: 600px) {
   footer p {
     font-size: 2.1vw;
   }
 }
-
 footer p a {
   color: grey;
 }
-
 footer p a:hover {
-  color: #a0a0a0;
+  color: rgb(160, 160, 160);
 }
 
 h1 {
   color: white;
   text-align: center;
-  font-family: 'Nerko One', cursive;
+  font-family: "Nerko One", cursive;
 }
 
 .presentation {
@@ -455,32 +131,26 @@ h1 {
   color: white;
   margin: auto auto;
 }
-
 .presentation h2 {
   border-radius: 0 0 50px 50px;
   display: block;
   border-bottom: 2px grey solid;
   width: 100%;
-  background-color: white;
+  background-color: rgb(255, 255, 255);
   color: black;
   text-align: center;
 }
-
 .presentation p {
   padding-left: 5px;
   padding-right: 5px;
   text-align: center;
   padding-bottom: 10px;
 }
-
 .presentation .separation {
-  display: -webkit-box;
-  display: -ms-flexbox;
   display: flex;
   width: 60vw;
   margin: auto auto;
 }
-
 .presentation .separation ul {
   list-style-type: none;
   text-align: center;
@@ -488,13 +158,11 @@ h1 {
   width: 50%;
   padding: 0;
 }
-
 .presentation .separation ul li {
-  border: 1px white solid;
+  border: 1px rgb(255, 255, 255) solid;
   background-color: black;
   color: white;
 }
-
 .presentation .separation ul li:nth-child(2n-1) {
   background-color: white;
   color: black;
@@ -502,262 +170,23 @@ h1 {
 
 @media (orientation: landscape) {
   .index_selection {
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: space-evenly;
-        -ms-flex-pack: space-evenly;
-            justify-content: space-evenly;
-    -ms-flex-line-pack: center;
-        align-content: center;
+    flex-wrap: wrap;
+    justify-content: space-evenly;
+    align-content: center;
     scroll-behavior: smooth;
-    -webkit-box-flex: 1;
-        -ms-flex: 1;
-            flex: 1;
-    -ms-flex-positive: 1;
-        flex-grow: 1;
-    display: -webkit-box;
-    display: -ms-flexbox;
+    flex: 1;
+    flex-grow: 1;
     display: flex;
-    -webkit-box-align: start;
-        -ms-flex-align: start;
-            align-items: flex-start;
+    align-items: flex-start;
     min-height: 0;
     margin-top: 15px;
   }
-  .index_selection a {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    padding: 0 4px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -ms-flex-line-pack: center;
-        align-content: center;
-    margin-bottom: 15px;
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    -webkit-transition: all 0.09s;
-    transition: all 0.09s;
-    color: white;
-    margin-left: 15px;
-    margin-right: 15px;
-  }
-  .index_selection a:hover {
-    text-decoration: none;
-    color: grey;
-  }
-  .index_selection a .ensemble {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    -webkit-transition: all 0.09s;
-    transition: all 0.09s;
-    width: 400px;
-    height: 350px;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    background-color: #343a40 !important;
-  }
-  .index_selection a .ensemble:hover {
-    -webkit-transform: scale(0.9);
-            transform: scale(0.9);
-  }
-  .index_selection a .ensemble .part_un {
-    border-top: 1px solid white;
-    border-left: 1px solid white;
-    border-bottom: 1px solid white;
-    height: 350px;
-  }
-  .index_selection a .ensemble .part_un h3 {
-    font-size: 20px;
-    text-align: justify;
-  }
-  .index_selection a .ensemble .part_un p {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    text-align: center;
-  }
-  .index_selection a .ensemble .part_deux {
-    border-top: 1px solid white;
-    border-right: 1px solid white;
-    border-bottom: 1px solid white;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -ms-flex-line-pack: center;
-        align-content: center;
-  }
-  .index_selection a .ensemble .part_deux .badge {
-    position: absolute;
-    top: 0;
-  }
-  .index_selection a .ensemble .part_deux span {
-    display: block;
-    width: 100%;
-    text-align: center;
-    color: black;
-    font-family: 'Kalam', cursive;
-    text-shadow: white 1px 1px, white -1px 1px, white -1px -1px, white 1px -1px;
-    font-weight: bold;
-    width: 100%;
-    font-size: 1.2em;
-    position: absolute;
-    bottom: 0;
-  }
-  .index_selection a .ensemble .part_deux img {
-    display: block;
-    -webkit-filter: drop-shadow(0 0 1px black);
-            filter: drop-shadow(0 0 1px black);
-    -o-object-fit: scale-down;
-       object-fit: scale-down;
-    width: 100%;
-    padding: 5px;
-  }
 }
-
 @media (orientation: portrait) {
   .index_selection {
-    -webkit-box-orient: vertical !important;
-    -webkit-box-direction: normal !important;
-        -ms-flex-direction: column !important;
-            flex-direction: column !important;
-    display: -webkit-box;
-    display: -ms-flexbox;
+    flex-direction: column !important;
     display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
+    flex-wrap: wrap;
     margin-top: 15px;
   }
-  .index_selection a {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    padding: 0 4px;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -ms-flex-line-pack: center;
-        align-content: center;
-    padding: 0 4px;
-    margin-bottom: 10px;
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    -webkit-transition: all 0.09s;
-    transition: all 0.09s;
-    color: white;
-  }
-  .index_selection a:hover {
-    text-decoration: none;
-    color: grey;
-  }
-  .index_selection a .ensemble {
-    -webkit-transform: scale(1);
-            transform: scale(1);
-    -webkit-transition: all 0.09s;
-    transition: all 0.09s;
-    width: 95vw;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    background-color: #343a40 !important;
-  }
-  .index_selection a .ensemble:hover {
-    -webkit-transform: scale(0.9);
-            transform: scale(0.9);
-  }
-  .index_selection a .ensemble .part_un {
-    border-top: 1px solid white;
-    border-left: 1px solid white;
-    border-right: 1px solid white;
-    display: block;
-    width: 100%;
-    max-width: none !important;
-    -webkit-box-flex: 0;
-        -ms-flex: none;
-            flex: none;
-    height: 100px;
-  }
-  .index_selection a .ensemble .part_un p {
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -webkit-box-orient: vertical;
-    -webkit-box-direction: normal;
-        -ms-flex-direction: column;
-            flex-direction: column;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    text-align: center;
-  }
-  .index_selection a .ensemble .part_deux {
-    border-left: 1px solid white;
-    border-right: 1px solid white;
-    border-bottom: 1px solid white;
-    width: 100%;
-    display: -webkit-box;
-    display: -ms-flexbox;
-    display: flex;
-    -ms-flex-wrap: wrap;
-        flex-wrap: wrap;
-    -webkit-box-pack: center;
-        -ms-flex-pack: center;
-            justify-content: center;
-    -ms-flex-line-pack: center;
-        align-content: center;
-    height: 100px;
-    max-width: none !important;
-    -webkit-box-flex: 0;
-        -ms-flex: none;
-            flex: none;
-  }
-  .index_selection a .ensemble .part_deux .badge {
-    position: absolute;
-    top: 0;
-    right: 0;
-  }
-  .index_selection a .ensemble .part_deux span {
-    display: block;
-    text-align: right;
-    color: black;
-    font-family: 'Kalam', cursive;
-    text-shadow: white 1px 1px, white -1px 1px, white -1px -1px, white 1px -1px;
-    font-weight: bold;
-    width: 100%;
-    font-size: 1.2em;
-  }
-  .index_selection a .ensemble .part_deux img {
-    display: block;
-    -webkit-filter: drop-shadow(0 0 1px black);
-            filter: drop-shadow(0 0 1px black);
-    -o-object-fit: contain;
-       object-fit: contain;
-    height: 100px;
-    max-width: 150px;
-    padding: 10px;
-    position: absolute;
-    bottom: 0;
-    left: 0;
-  }
-}
-/*# sourceMappingURL=style.css.map */
+}/*# sourceMappingURL=style.css.map */
