Amélioration du dynamisme du rendu

--- a/assets/css/cards.css
+++ b/assets/css/cards.css
@@ -38,6 +38,15 @@
   bottom: 0;
   right: 0;
 }
+.carte:hover {
+  animation: gelatine 0.5s infinite;
+}
+.carte:visited {
+  background: rgba(255, 255, 255, 0.5);
+}
+.carte:active {
+  animation: pulse 1s infinite ease-in-out alternate;
+}
 
 .Javascript {
   background-color: rgba(251, 255, 0, 0.445);
@@ -111,4 +120,27 @@
 
 .GEN {
   background-color: rgba(255, 255, 255, 0.4745098039);
+}
+
+@keyframes gelatine {
+  from, to {
+    transform: scale(1, 1);
+  }
+  25% {
+    transform: scale(0.9, 1.1);
+  }
+  50% {
+    transform: scale(1.1, 0.9);
+  }
+  75% {
+    transform: scale(0.95, 1.05);
+  }
+}
+@keyframes pulse {
+  from {
+    transform: scale(1, 0.9);
+  }
+  to {
+    transform: scale(1.2, 1.2);
+  }
 }/*# sourceMappingURL=cards.css.map */
