--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -12,7 +12,6 @@
 
 body {
   background-color: #1b1b1b;
-  overflow: hidden;
 }
 
 .searcher select {
@@ -27,33 +26,21 @@ body {
   margin: 0;
 }
 
-@media (orientation: landscape) {
-  .scrollbar {
-    margin-top: 15px;
-    overflow-y: scroll;
-    height: 83vh;
-  }
-  .scrollbar section {
-    display: flex;
-    flex-flow: row wrap;
-    justify-content: center;
-    align-content: space-between;
-  }
+section {
+  display: flex;
+  flex-wrap: wrap;
 }
 @media (orientation: portrait) {
-  .scrollbar {
-    margin-top: 15px;
-    overflow-y: scroll;
-    height: 81vh;
-    margin: 5px 5px;
-  }
-  .scrollbar section {
-    display: flex;
-    flex-flow: row wrap;
+  section {
     justify-content: center;
-    align-content: space-between;
   }
 }
+@media (orientation: landscape) {
+  section {
+    justify-content: space-between;
+  }
+}
+
 ::-webkit-scrollbar {
   width: 7px;
   height: 7px;
@@ -99,7 +86,8 @@ body {
 footer {
   background-color: #343a40 !important;
   text-align: center;
-  position: fixed;
+  margin: 0;
+  height: 70px;
   bottom: 0;
   width: 100%;
 }
@@ -108,7 +96,7 @@ footer p {
 }
 @media only screen and (max-width: 600px) {
   footer p {
-    font-size: 2.1vw;
+    font-size: 1em;
   }
 }
 footer p a {
